[project @ 2003-08-08 16:20:17 by rkitain] M src/com/sun/faces/renderkit/RenderKitImpl.java    - fixed obsolete comment M src/com/sun/faces/renderkit/html_basic/ButtonRenderer.java M src/com/sun/faces/renderkit/html_basic/CheckboxRenderer.java M src/com/sun/faces/renderkit/html_basic/DateRenderer.java M src/com/sun/faces/renderkit/html_basic/DateTimeRenderer.java M src/com/sun/faces/renderkit/html_basic/ErrorsRenderer.java M src/com/sun/faces/renderkit/html_basic/FormRenderer.java M src/com/sun/faces/renderkit/html_basic/GridRenderer.java M src/com/sun/faces/renderkit/html_basic/GroupRenderer.java M src/com/sun/faces/renderkit/html_basic/HiddenRenderer.java M src/com/sun/faces/renderkit/html_basic/HtmlBasicRenderer.java M src/com/sun/faces/renderkit/html_basic/HyperlinkRenderer.java M src/com/sun/faces/renderkit/html_basic/ImageRenderer.java M src/com/sun/faces/renderkit/html_basic/LabelRenderer.java M src/com/sun/faces/renderkit/html_basic/ListRenderer.java M src/com/sun/faces/renderkit/html_basic/ListboxRenderer.java M src/com/sun/faces/renderkit/html_basic/MenuRenderer.java M src/com/sun/faces/renderkit/html_basic/MessageRenderer.java M src/com/sun/faces/renderkit/html_basic/NumberRenderer.java M src/com/sun/faces/renderkit/html_basic/RadioRenderer.java M src/com/sun/faces/renderkit/html_basic/SecretRenderer.java M src/com/sun/faces/renderkit/html_basic/SelectManyCheckboxListRenderer.java M src/com/sun/faces/renderkit/html_basic/TextAreaRenderer.java M src/com/sun/faces/renderkit/html_basic/TextRenderer.java M src/com/sun/faces/renderkit/html_basic/TimeRenderer.java    - for the most part, use high level ResponseWriter methods;    - also removed some unused import statements; M src/com/sun/faces/taglib/jsf_core/UseFacesTag.java    - added doStartTag/doEndTag methods tp perform ResponseWriter.startDocument/endDocument M src/com/sun/faces/util/Util.java    - revamped "renderPassThru" methods to use ResponseWriter directly (no return string); M test/com/sun/faces/Fi